replace apache commons io with java 11 builtin equivalent