@@ -6,11 +6,11 @@ import com.comp455.httpclient.logger.Logger;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.SneakyThrows;
-import org.apache.commons.io.FileUtils;
 
-import java.io.File;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 @Getter
 @Setter
@@ -37,7 +37,7 @@ public class PostCommand extends HttpCommand {
         } else if(inlineData != null) {
             entityBody = inlineData;
         } else if(dataFilePath != null) {
-            entityBody = FileUtils.readFileToString(new File(dataFilePath), StandardCharsets.UTF_8);
+            entityBody = Files.readString(Paths.get(dataFilePath), StandardCharsets.UTF_8);
         }
 
         HttpResponse httpResponse = new HttpClient(this.isFollowRedirects())
